Fixes form field width by stretching the element to the available space (#40)

--- a/components/Form/Form.module.scss
+++ b/components/Form/Form.module.scss
@@ -12,7 +12,7 @@
   flex-direction: column;
   gap: 0.5rem;
   width: 100%;
-  align-items: flex-start;
+  align-items: stretch;
 }
 
 .message {
